# Android-Development

./: README.md
Assignments/Assignment 01/Kotlin_Compose_Version/: README.md  settings.gradle.kts
Assignments/Assignment 01/Kotlin_Compose_Version/app/: build.gradle.kts
Assignments/Assignment 01/Kotlin_Compose_Version/gradle/wrapper/: gradle-wrapper.properties
Assignments/Assignment 01/Kotlin_XML_Version/: README.md  settings.gradle.kts
Assignments/Assignment 01/Kotlin_XML_Version/app/: build.gradle.kts
Assignments/Assignment 01/Kotlin_XML_Version/gradle/wrapper/: gradle-wrapper.properties
Assignments/Assignment 02/: README.md  settings.gradle.kts
Assignments/Assignment 02/app/: build.gradle.kts
Assignments/Assignment 02/app/src/main/: AndroidManifest.xml
Assignments/Assignment 02/gradle/: libs.versions.toml
Assignments/Assignment 02/gradle/wrapper/: gradle-wrapper.properties
Assignments/Assignment 03/Matrix Calculator/: README.md  settings.gradle
Assignments/Assignment 03/Matrix Calculator/app/: build.gradle
Assignments/Assignment 03/Matrix Calculator/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Assignments/Assignment 03/Matrix Calculator/gradle/: libs.versions.toml
Assignments/Assignment 03/Wifi Logger/: README.md  settings.gradle.kts
Assignments/Assignment 03/Wifi Logger/app/: build.gradle.kts
Assignments/Assignment 03/Wifi Logger/gradle/: libs.versions.toml
Projects/WeatherApp/app/: build.gradle.kts
Projects/WeatherApp/gradle/: libs.versions.toml
Projects/WeatherApp/gradle/wrapper/: gradle-wrapper.properties
(+98 files in other folders)
